--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
+    "element-histories": "0.0.1",
     "periodic-table": "0.0.6",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
