--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
     "element-histories": "0.0.1",
+    "jquery": "^3.1.1",
     "periodic-table": "0.0.6",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
