--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^0.26.1",
     "element-histories": "0.0.1",
     "jquery": "^3.1.1",
+    "material-ui": "^0.16.5",
     "periodic-table": "0.0.6",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
